# ChangeLog for app-misc/rbutil
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Jun 2010; Dane Smith (smithdanea) <smithdanea@gmail.com>
  -rbutil-1.2.6.ebuild, +rbutil-1.2.7.ebuild:
  Version bump for rbutil.

  08 Jun 2010; Laurento Frittella (mrfree) <laurento.frittella@gmail.com>
  +rbutil-1.2.6.ebuild, +metadata.xml:
  New Ebuild for bug 183494
