@@ -1,4 +1,4 @@
 DIST rbutil_1.2.7-src.tar.bz2 763945 RMD160 e5201b45ed330707aea289015612ab7318bfedd6 SHA1 2a438706b2087278c6544210b5040de3a6a2678e SHA256 dbe773fa747baf6e22e87ea2955d23f4136aea00dfe1eb250e894364cd9570c9
-EBUILD rbutil-1.2.7.ebuild 885 RMD160 869e8263c49bc93c70c084a1f3c6b0d8c57cba4b SHA1 7861ca9add4b5a0c123e02cefa38f847f7f856b0 SHA256 3c29d8f32b2ee95ab19c2d48ecfd30b6e5a16e9f4ca09d57b12804709df79cac
-MISC ChangeLog 394 RMD160 b21461d063b8d03653f68f72eb7cd6ca26ef6fa4 SHA1 8fdace9cd69f6f8d784ebe6813e3483a6c215dd5 SHA256 253527c0706a89990fad2236003cd872dd96516b8d71e28dc881b1a87e477a21
+EBUILD rbutil-1.2.7.ebuild 905 RMD160 d02a77d42826799b717813bbf1d908499bf29c91 SHA1 9838f82dc8c964670f5ebae0c2a746c1a56aa90f SHA256 a7da921a55698dc827a288f28ef55ca74e3fae1232b4cab9e1027db3451a91d4
+MISC ChangeLog 654 RMD160 f16f3b0c95fb37fc33a8fce2d262a9f266bd5706 SHA1 400645f958dd41e9891b1f0ac1f17e083c025945 SHA256 ef6e4e3be680c0472e703e48d73d9ed1bcc34210c895da2c973f9f5dabaeb1f8
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
